fixed layout issues

--- a/app-dev/styles/base/layout.css
+++ b/app-dev/styles/base/layout.css
@@ -2568,10 +2568,13 @@ article.message {
 			margin-right: 0;
 		}
 		.row.input-tips .right {
+			position: absolute;
+			top: 0;
+			right: 0.8rem;
 			box-sizing: border-box;
-			width: 25%;
+			width: auto;
 			margin-left: 0;
-			padding-right: 0;
+			margin-right: -0.5rem;
 		}
 		.emphasise-leftside   .row .left,
 		.emphasise-rightside  .row .right,
@@ -2621,8 +2624,11 @@ article.message {
 		}
 		.row.fake-input-field .right,
 		.row.input-field      .right {
-			width: 25%;
-			margin-left: -0.5rem;
+			position: absolute;
+			right: 0.8rem;
+			top: 0;
+			width: auto;
+			margin-left: 0;
 		}
 		.row.select-field .left {
 			width: calc(100% - 1.8rem); /* for covering OS select control down arrow */
@@ -2695,6 +2701,7 @@ article.message {
 		.row.input-field.style-traditional .input-tip {
 			left: 0.5rem;
 		}
+
 	.row.input-field.input-verification-code {
 		}
 		.row.input-field.input-verification-code .left {
@@ -2702,6 +2709,7 @@ article.message {
 			width: calc(100% - 6rem);
 		}
 		.row.input-field.input-verification-code .right {
+			right: 0;
 			padding: 0;
 			margin: 0.725rem -0.25rem;
 			width: 6rem;
@@ -2733,12 +2741,11 @@ article.message {
 	.row.input-field.input-image-vcode {
 		margin-top: 0.5rem;
 		height: 2.4rem;
-		background-color: #e5e5e5;
 		}
 		.row.input-field.input-image-vcode .left {
 			height: 100%;
 			padding: 0;
-			width: calc(100% - 6rem);
+			width: calc(100% - 8rem);
 		}
 		.row.input-field.input-image-vcode .left input {
 			margin: 0;
@@ -2748,6 +2755,7 @@ article.message {
 		}
 		.row.input-field.input-image-vcode .right {
 			margin: 0;
+			right: 0;
 			padding: 0.25rem;
 			width: 6rem;
 			height: 100%;
@@ -2777,13 +2785,32 @@ article.message {
 		.dialog .row.input-field.input-image-vcode {
 		}
 		.dialog .row.input-field.input-image-vcode .left {
-			width: 8rem;
+			width: calc(100% - 6rem);
+			/* width: 8rem; */
 		}
 		.dialog .row p.input-tip {
 			margin-top: 0;
 			margin-bottom: 0;
 			font-weight: 500;
 		}
+	@media only screen and (max-width: 345px) { /* iPhone 4/4S/5/5S/SE */
+		.dialog .row.input-field.input-image-vcode {
+			padding-top: 2.4rem;
+			height: auto;
+		}
+		.dialog .row.input-field.input-image-vcode .left {
+			height: 2.4rem;
+			display: block;
+			width: auto;
+		}
+		.dialog .row.input-field.input-image-vcode .right {
+			height: 2.4rem;
+			display: block;
+			width: 100%;
+			margin: 0;
+		}
+	}
+
 
 	.row.article {
 		margin-top: 0.5rem;
@@ -3090,11 +3117,11 @@ article.message {
 	.product-caption-block {
 		font-size: 0.8rem;
 		font-weight: 400;
+		margin-right: 0.25rem;
 	}
 	.product-caption-block sub {
 		display: inline-block;
 		vertical-align: middle;
-		margin-left: 0.25rem;
 	}
 
 	.product-caption-block.dual-lines .product-name {
@@ -3682,6 +3709,15 @@ article.message {
 		position: relative;
 		padding-left: 2.5rem;
 		width: 70%;
+	}
+	@media only screen and (max-width: 345px) { /* iPhone 4/4S/5/5S/SE */
+		.fund-trading-record .f-block-body .row.multi-lines .left {
+			width: 55%;
+		}
+		.fund-trading-record .f-block-body .row.multi-lines .left .product-caption-block sub {
+			display: block;
+			margin-left: 0;
+		}
 	}
 
 	.fund-trading-record .f-block-body .row.multi-lines .marker {
